add oracle jdbc example